[metadata]
name = testpilot
description = Format, lint and test only the files that have changed on the current branch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hypothesis/testpilot
project_urls =
    Bug Tracker = https://github.com/hypothesis/testpilot/issues
    Changelog = https://github.com/hypothesis/testpilot/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    toml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    testpilot = testpilot.main:entry_point

[pycodestyle]
ignore =
    # Disable pycodestyle errors and warnings that we don't care about because
    # Black formats our code for us.
    E203,  # Whitespace before ':',
    E231,  # Missing whitespace after ',',
    E501,  # Line too long,
    W503,  # Line break before binary operator,

    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
    E722,
